<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    tools:context=".views.NameChangeFragment">


    <TextView
        android:id="@+id/nameChangeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nameChangeTitle"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/changeNameButtonLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/nameChangeEditLabel"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameChangeTitle" />

    <EditText
        android:id="@+id/changeNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/nameChangeEditHint"
        android:textSize="13sp"
        android:paddingStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeNameButtonLabel" />

    <TextView
        android:id="@+id/nameChangeErrorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameChangeErrorMessage"
        android:textColor="@color/orange"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeNameEditText" />

    <Button
        android:id="@+id/nameChangeJokeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/nameChangeShowJokeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameChangeErrorMessage" />

    <ImageView
        android:id="@+id/nameChangeImage"
        android:layout_width="209dp"
        android:layout_height="172dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/chucknorrisangryface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameChangeJokeButton" />

    <TextView
        android:id="@+id/nameChangeImageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/nameChangeImageText"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameChangeImage" />

    <Button
        android:id="@+id/nameChangeMenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goBackToMenu"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>