<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    tools:context=".views.RandomJokeFragment">

    <TextView
        android:id="@+id/randomJokeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/titleRandomJoke"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/randomJokeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:buttonTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/randomJokeTitle" />



    <TextView
        android:id="@+id/checkBoxLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBoxLabel"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:paddingStart="5dp"
        android:layout_marginTop="22dp"
        app:layout_constraintStart_toEndOf="@+id/randomJokeCheckBox"
        app:layout_constraintTop_toBottomOf="@+id/randomJokeTitle" />

    <TextView
        android:id="@+id/randomJokeButtonLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/clickButtonForRandomJoke"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/randomJokeCheckBox" />


    <Button
        android:id="@+id/randomJokeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/randomJokeButton"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/randomJokeButtonLabel" />

    <ImageView
        android:id="@+id/randomJokeChuckNorris"
        android:layout_width="317dp"
        android:layout_height="252dp"
        android:src="@drawable/chucknorrisshotgun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/randomJokeButton" />

    <Button
        android:id="@+id/randomJokeGoBackToMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goBackToMenu"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>